--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "dotenv": "^16.4.5",
     "mongoose": "^6.1.8"
   }
 }
